2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: rename the default tapetype, since EXABYTE
	  sounds like it might actually be useful, but it's only 2M
	* man/xml-source/amanda.conf.5.xml: remove default
	* server-src/amcheck.c: only check whether fallback_splitsize < tape
	  length if splitting is enabled; check for a missing tapetype param

2010-03-14 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc06.  NOTEST

2010-03-11 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc05. 

2010-03-11  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: fixed order that messages are reported

2010-03-11 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc04

2010-03-10  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/null.pm: note that constructor will not fail
	* server-src/amidxtaped.pl: use chg-null if the changer constructor
	  fails

2010-03-10  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Report.pm: count DLEs on the first tape
	* perl/Amanda/Report/postscript.pm: display total part count
	* installcheck/amreport.pl: changed output

2010-03-10  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/progs.m4: add a define if LPR is found
	* server-src/amcheck.c: check it

2010-03-09  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: fixed caching of hostnames and dles

2010-03-09 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: rc02

2010-03-09  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-applications.7.xml: add brief example of
	  setting properties for an application

2010-03-09  Paul C. Mantz
	* perl/Amanda/Report.pm: L_PARTPARTIAL handles the same as L_PART

2010-03-08 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/rules: add chmod lines for etc/amanda
	*  packaging/rpm/amanda.spec: move ${SYSCONFDIR}/amanda to 750
	   section, specify directories in 750 section to also be 750.

2010-03-08  Paul C. Mantz <pcmantz@zmanda.com>